--- a/style.css
+++ b/style.css
@@ -2,3 +2,35 @@ body{
 padding: 100px;
 
 }
+.submit-area{
+    margin-top: 50px;
+    padding: 40px;
+    box-shadow: 5px 5px 10px grey;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+#transaction-area{
+    display: none;
+}
+.staus{
+    color: #fff;
+    margin: 0px 20px;
+    padding: 20px;
+    border-radius:10px ;
+    -webkit-border-radius:10px ;
+    -moz-border-radius:10px ;
+    -ms-border-radius:10px ;
+    -o-border-radius:10px ;
+}
+.deposit{
+    background-color: slateblue;
+}
+.withdraw{
+    background-color: lightsalmon;
+}
+.balance{
+    background-color: orange;
+}
